--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js ../pseudo-c-server/pseudo-c-server"
+    "start": "node index.js"
   },
   "author": "refracta",
   "license": "ISC"
