--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "pseudo-node-server",
+  "name": "nethack-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "express": "4.17.1",
     "socket.io": "2.3.0",
-    "unix-dgram-socket": "1.1.0"
+    "unix-dgram-socket": "1.1.0",
+    "node-pty": "0.9.0",
+    "ws": "7.3.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js /root/nh/install/games/nethack"
   },
   "author": "refracta",
-  "license": "ISC"
+  "license": "ISC",
 }
