--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "express": "4.17.1",
     "unix-dgram-socket": "1.1.0",
     "node-pty": "0.9.0",
-    "node-uuid": "1.4.8",
+    "uuid": "8.3.0",
     "lowdb": "1.0.0",
     "ws": "7.3.1"
   },
