add build files

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -11,4 +11,11 @@ RUN cmake ../json-c && \
         make install
 ENV LD_LIBRARY_PATH $LD_LIBRARY_PATH:/usr/local/lib
 
-WORKDIR /usr/src
+WORKDIR /usr/NetHack-Webtiles
+RUN cp ./dev/archive.index-normal /etc/nginx/site-available/
+RUN cp ./dev/archive.index-json /etc/nginx/site-available/
+RUN sudo ln -s /etc/nginx/sites-available/archive.index-normal /etc/nginx/sites-enabled/
+RUN sudo ln -s /etc/nginx/sites-available/archive.index-json /etc/nginx/sites-enabled/
+RUN rm /etc/nginx/sites-enabled/default
+
+CMD service nginx start
