--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "node-pty": "0.9.0",
     "uuid": "8.3.0",
     "lowdb": "1.0.0",
-    "ws": "7.3.1"
+    "ws": "7.3.1",
+    "xterm": "4.8.1",
+    "xterm-addon-serialize": "0.3.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js /root/nh/install/games/nethack"
+    "start": "node index.js"
   },
   "author": "refracta",
   "license": "ISC",
