--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get -y update && \
         apt-get install -y \
         gcc git cmake bison flex gdb curl libncurses5-dev ttyrec nginx tmux nano && \
         curl -sL https://deb.nodesource.com/setup_10.x | bash - && \
+        apt-get install -y nodejs && \
         git clone https://github.com/json-c/json-c.git && \
         mkdir jsonc-build
 WORKDIR /usr/src/jsonc-build
