--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 * text=auto
 
 # Never modify line endings of our bash scripts
-*.sh -crlf
+*.sh eol=lf
 
 #
 # The above will handle all files NOT found below
