Simplify the data preprocessing (#10)
* add data extract logic (cursor, character pos, ...)

* add udsInfo check (bugfix)

* add gitattributes & fix gitignore

* Merge from develop branch (#9)

* Support linux env build script (#7)

* remove module type

* add ubuntu env script

* change script name

env-ubuntu.sh → env-debian.sh

* remove sudo from nethack build script

* Fix Alt+Shift input problem (uppercase input) (#8)

* alt + 대문자 입력을 받을 수 있도록 수정

* 'alt + shift' 입력이 무시되지 않는 버그 수정

* 오타 수정

Co-authored-by: uiopuipo <>

Co-authored-by: uiopuipo <vbmnvbnm@naver.com>

* remove preprocessing, prehandling logic

* fix function name error

* fir function name error (initSocket)

* fix *.sh eol setting

* fix wrong gitignore format

* add fast env setting script

* remove install command

* add IDE files

* fix debug print logic

* add function tracker

* implement new data handling logic

* fix missing semicolon

Co-authored-by: refracta <partholon@WIN-V46F704S775.localdomain>
Co-authored-by: uiopuipo <vbmnvbnm@naver.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-./node_modules
-./package-lock.json
+.idea/
+json-c/
+jsonc-build/
+node_modules/
+games/
+sources/
+archive/
+package-lock.json
+games.json
+db.json
