--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lowdb": "1.0.0",
     "ws": "7.3.1",
     "xterm": "4.8.1",
-    "xterm-addon-serialize": "0.3.0"
+    "xterm-addon-serialize": "0.3.0",
+    "crypt3": "1.0.0"
   },
   "devDependencies": {},
   "scripts": {
